force-app/main/default/objects/Patient__c/fields/Admission_Type__c.field-meta.xml
<CustomField>
    <fullName>Admission_Type__c</fullName>
    <label>Admission Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Admission_Type</valueSetName>
    </valueSet>
</CustomField>