force-app/main/default/objects/Patient__c/fields/Assigned_Department__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Department__c</fullName>
    <label>Assigned Department</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Department</valueSetName>
    </valueSet>
</CustomField>