force-app/main/default/objects/Patient__c/fields/Insurance_Status__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Status__c</fullName>
    <label>Insurance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Insurance_Status</valueSetName>
    </valueSet>
</CustomField>